--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,12 @@ Home Page
   
           <div class="row content">
             <div class="col-lg-6" data-aos="fade-right">
-              <h2>{{ about.title }}</h2>
-              <img src="{{ about.image.url }}" style="height: 200px; width: 400px; ">
+              <h2>{{ about.0.title }}</h2>
+              <img src="{{ about.0.image.url }}" style="height: 200px; width: 400px; ">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
               <p class="fst-italic">
-                {{ about.discription }}
+                {{ about.0.discription }}
               </p>
             </div>
           </div>
